--- a/resources/panel/assets/css/app.css
+++ b/resources/panel/assets/css/app.css
@@ -99,7 +99,7 @@ button{
 
 .checkbox input[type=checkbox]:checked + label,
 .v-checkbox.v-full-checked{
-    background: #3484F5;
+    background: #8D81F8;
 }
 .checkbox.half-checked label:before,
 .v-checkbox.v-checked:before{
@@ -107,7 +107,7 @@ button{
     position: absolute;
     width: 8px;
     height: 2px;
-    background: #3484F5;
+    background: #8D81F8;
     top: 5px;
     left: 2px;
     border-radius: 1px;
@@ -618,13 +618,12 @@ button{
 }
 .footer button{
     width: 100%;
-    font-family: HelveticaNeue-Medium;
-    font-size: 18px;
+    font-size: 16px;
     color: #FFF;
-    height: 48px;
+    height: 44px;
     border: 0;
-    background: #3484F5;
-    border-radius: 4px;
+    background: #8D81F8;
+    border-radius: 9px;
     cursor: pointer;
 }
 
@@ -633,10 +632,10 @@ button{
     color: rgba(255,255,255,0.30);
 }
 .footer button:hover{
-    background: #2E76DC;
+    background: rgb(106, 92, 233);
 }
 .footer button:active{
-    background: #245CAB;
+    background: #8D81F8;
 }
 .footer button:disabled:hover{
     background: #898989;
@@ -735,7 +734,7 @@ button{
 }
 .orderbox .radiobox input[type=radio]:checked + label,
 .reversebox .radiobox input[type=radio]:checked + label {
-    background-color: #3484F5;
+    background-color: #8D81F8;
 }
 .orderbox .radiobox input[type=radio]:disabled + label,
 .reversebox .radiobox input[type=radio]:disabled + label {
@@ -747,17 +746,15 @@ button{
     position: absolute;
     right: 20px;
 }
-.reversebox .radiobox label,
-.reversebox .radiobox input[type=radio]:checked + label,
-.reversebox .radiobox input[type=radio]:disabled + label{
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAoBAMAAAB+0KVeAAAAHlBMVEUAAAD///////////////////////////////////8kfJuVAAAACXRSTlMA7tm7lWpEJhE46DAfAAAAPElEQVQoz2MYkmDmwAjOHLGCnjNnzpwCo2CAGcgzgFEwwKE5c1IDjIKDwpniMAoB2GYmwCkECIVRQwoAAHUjI92L7AS/AAAAAElFTkSuQmCC');
-    background-position: 0;
+.reversebox .radiobox {
+    width: 48px;
 }
-.reversebox .radiobox.reverse-radio label,
-.reversebox .radiobox.reverse-radio input[type=radio]:checked + label,
-.reversebox .radiobox.reverse-radio input[type=radio]:disabled + label{
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAoBAMAAAB+0KVeAAAAHlBMVEUAAAD///////////////////////////////////8kfJuVAAAACXRSTlMA7tm7lWpEJhE46DAfAAAAR0lEQVQoz2MYkiAUixjbzARMwcKZ4hhiHJozJzWgCzLPnDnTAF3QEyg4BdPamdisnYnN2pnYrJ2JzdqZ6NaiCkJ5I1Zw0AMALjgj3XRPFaMAAAAASUVORK5CYII=');
+.reversebox .radiobox label
+ {
+    width: 48px;
+    background-image: none;
+    font-family: "PingFangSC-Medium";
+    font-size: 12px;
+    text-align: center;
 }
 
